cluster/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: gateway
spec:
  gatewayClassName: eg
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: nodeport-proxy
  listeners:
    - name: gitlab
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: adminer
      protocol: HTTP
      port: 8080
      allowedRoutes:
        namespaces:
          from: All
    - name: valkey
      protocol: HTTP
      port: 8081
      allowedRoutes:
        namespaces:
          from: All
    - name: policy-reporter
      protocol: HTTP
      port: 9090
      allowedRoutes:
        namespaces:
          from: All
